css/prsm.css
/* ... */
/* Hide default HTML checkbox */
.switch input {
	opacity: 0;
	width: 0;
	height: 0;
}
/* The slider */
.slider {
	position: absolute;
	cursor: pointer;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: rgb(0, 0, 0);
	transition: 0.4s;
}
.slider:before {
	position: absolute;
	content: '';
	height: 14px;
	width: 14px;
	left: 2px;
	bottom: 1px;
	background-color: white;
	transition: 0.4s;
}
input:checked + .slider {
	background-color: rgb(169, 169, 169);
}
input:focus + .slider {
	box-shadow: 0 0 1px rgb(169, 169, 169);
}
input:checked + .slider:before {
	transform: translateX(12px);
}
/* Rounded sliders */
.slider.rounded {
	border-radius: 17px;
	border: 1px solid rgb(128, 128, 128);
}
.slider.rounded:before {
	border-radius: 50%;
}

/* create a push button */
.pushbutton {
	padding: 0 5px;
	background-color: white;
	border: 1px solid rgb(128, 128, 128);
	border-top: 1px solid white;
	border-radius: 8px;
	font-size: 12px;
	color: rgb(0, 0, 0);
	outline: none;
	transition: All 250ms ease;
}
.pushbutton:active {
	background-color: rgb(128, 128, 128);
	border: 1px solid rgb(0, 0, 0);
	border-top: 1px solid rgb(128, 128, 128);
	color: white;
	transition: All 250ms ease;
}

/*  style editors */
.styleEditor {
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	justify-items: center;
	align-items: center;
	grid-gap: 5px;
	border-radius: 6px;
	width: 250px;
	background-color: var(--pop-up-color);
	box-shadow: 2px 2px 10px 0px var(--pop-up-shadow-color);
	border: thin solid var(--pop-up-shadow-color);
	color: rgb(0, 0, 0);
	font-family: Oxygen, sans-serif;
	font-size: 12px;
	padding: 10px;
}
.hideEditor {
	display: none;
}
.styleEditorContainer {
	position: absolute;
	z-index: 10;
}
.styleEditor .header {
	grid-column: 1/3;
	justify-self: start;
	font-weight: bold;
	font-size: 14px;
	color: rgb(0, 0, 0);
}
.styleEditor .title {
	grid-column: 1/4;
}
.styleEditor .title input {
	font-family: sans-serif;
	font-size: 12px;
	border: 1px solid rgb(0, 0, 0);
	border-radius: 4px;
	padding: 4px;
	margin: -2px 0 0 11px;
}
.styleEditor .sizer {
	grid-column: 1 / 3;
	justify-self: end;
}
.styleEditor .x-button {
	color: rgb(0, 0, 0);
	position: absolute;
	top: 3px;
	right: 5px;
	font-size: 20px;
}
.styleEditor .x-button:hover {
	color: rgb(128, 128, 128);
	text-decoration: none;
	cursor: pointer;
}
.styleEditor .save-button {
	font-size: 12px;
	background-color: rgb(0, 0, 0);
	color: white;
	border-radius: 20%;
	padding: 3px;
}
.styleEditor .save-button:hover {
	text-decoration: none;
	cursor: pointer;
	background-color: rgb(128, 128, 128);
}
.styleEditor .submit {
	grid-column: 3/4;
	justify-self: end;
}
/* minimap */
#minimapWrapper {
	position: absolute;
	bottom: 12px;
	right: 12px;
	margin: 5px;
	border: 1px solid grey;
	border-radius: 4px;
	overflow: hidden;
	background-color: white;
	box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.75);
	z-index: 9;
	user-select: none;
	display: none;
	transition: opacity 0.3s linear;
}
#minimapImage {
	position: absolute;
	user-select: none;
}
#minimapRadar {
	position: absolute;
	background-color: transparent;
	border: 1px solid grey;
	user-select: none;
}
/* History window */
.history-window {
	display: none;
	position: absolute;
	top: 110px;
	left: calc(100% - 630px);
	width: 400px;
	z-index: 2200;
	background-color: rgb(0, 0, 0);
	border-radius: 4px;
}
.history-header {
	background-color: rgb(0, 0, 0);
	border-radius: 4px 4px 0 0;
	text-align: center;
	color: white;
}
.history-close {
	padding-right: 10px;
	float: right;
}
.history-close:hover {
	color: var(--header-hover-color);
}
.history-copy {
	padding-left: 10px;
}
.history-log-wrapper {
	max-height: 500px;
	overflow-y: scroll;
	overflow-x: clip;
	width: 100%;
	border: 2px solid rgb(0, 0, 0);
	border-radius: 0 0 4px 4px;
	box-sizing: border-box;
}
.history-log {
	display: grid;
	grid-template-columns: 85px 1fr 28px;
	width: 100%;
	font-size: 12px;
	background-color: var(--notes-background-color);
	user-select: none;
	-webkit-user-select: none;
	padding-top: 4px;
}
.history-time {
	grid-column: 1;
	padding-left: 4px;
}
.history-action {
	grid-column: 2;
}
.history-rollback {
	grid-column: 3;
	cursor: default;
	justify-self: center;
}
.history-rollback .tooltip .rollbacktip {
	top: -50%;
	margin-left: -130px;
}

/* Legend */
.legend {
	position: fixed;
	bottom: 80px;
	left: 20px;
	max-height: 75%;
	overflow-y: auto;
	box-shadow: 2px 2px 10px 0px var(--pop-up-shadow-color);
	border: thin solid var(--pop-up-shadow-color);
	background-color: white;
	border-radius: 4px;
	margin: 0;
	user-select: none;
	-webkit-user-select: none;
	z-index: 30;
}
.legendTitle {
	font-weight: bold;
	text-align: center;
	padding: 3px;
	user-select: none;
	-webkit-user-select: none;
}
.legendCanvas {
	width: 100%;
	height: 100%;
}
/* drawing layer */
.drawing-canvas {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: transparent;
	opacity: 0.9;
}
.toolbox {
	position: absolute;
	top: 100px;
	left: 10px;
	z-index: 1003;
	display: none;
}
.toolbox-header {
	height: 15px;
	width: 40px;
	border: 1px solid rgb(0, 0, 0);
	border-radius: 3px;
	margin: 8px;
}
.toolbox-divider {
	height: 2px;
}
.tool {
	position: relative;
	width: 40px;
	height: 40px;
	border-radius: 6px;
	text-align: center;
	line-height: 40px;
	font-size: 26px;
	color: white;
	background-color: rgb(0, 0, 0);
	margin: 8px;
}
.tool:hover {
	box-shadow: 0 0 0 2px rgb(169, 169, 169) inset;
}
.tool:active,
.selected {
	background-color: rgb(58, 59, 60);
}
.disabled {
	color: var(--header-disabled-color);
}
.tool .tooltiptext {
	visibility: hidden;
	top: 0;
	left: 50px;
	background-color: rgb(128, 128, 128);
	color: white;
	text-align: center;
	padding: 5px 10px;
	border-radius: 6px;
	font-size: 12px;
	line-height: 1;
	position: absolute;
	z-index: 5;
	opacity: 0;
	transition: opacity 0.5s linear 1s;
}
.tool:hover .tooltiptext {
	visibility: visible;
	opacity: 1;
}
.tool:active .tooltiptext {
	visibility: hidden;
}
/* ... */

